--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 <h2>My Music</h2>
                 <div class="music-grid">
                     <div class="music-card">
-                        <h3>Music Track 1</h3>
-                        <p>A sample music project I've created. Enjoy the preview!</p>
+                        <h3>NewComer - Sample</h3>
+                        <p>A Sample To A Song I've Created</p>
                         <audio controls>
-                            <source src="assets/music1.mp3" type="audio/mpeg">
+                            <source src="NewComerSample.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -114,7 +114,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Would you like to join the discord?</p>
-            <img src="assets/DiscordIcon.png" alt="Discord Icon" class="discord-icon">
+            <img src="DiscordIcon.png" alt="Discord Icon" class="discord-icon">
             <button id="join-discord">Yes</button>
             <button id="no-join">No</button>
         </div>
@@ -124,7 +124,7 @@
         <div class="modal-content">
             <span class="close-roblox">&times;</span>
             <p>You're leaving my site to go to https://www.roblox.com/games/placeholder. Continue?</p>
-            <img src="assets/RobloxIcon.png" alt="Roblox Icon" class="roblox-icon">
+            <img src="RobloxIcon.png" alt="Roblox Icon" class="roblox-icon">
             <button id="continue-roblox">Continue</button>
             <button id="nevermind-roblox">Nevermind</button>
         </div>
