--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#music">Music</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -65,6 +66,7 @@
         <section id="projects" class="projects">
             <div class="container">
                 <h2>My Projects</h2>
+                <p class="section-note">To add more projects, simply duplicate a &lt;div class="project-card"&gt; block below and customize the content.</p>
                 <div class="projects-grid">
                     <div class="project-card">
                         <h3>StorysALike</h3>
@@ -76,6 +78,46 @@
                         <p>Based off of The normal elevator, explore secrets and survive the floors you're brought to because of the elevator!</p>
                         <button id="play-btn" class="project-button">Play</button>
                     </div>
+                    <!-- Example: Add more like this -->
+                    <!--
+                    <div class="project-card">
+                        <h3>New Project</h3>
+                        <p>Description here.</p>
+                        <button class="project-button">Action</button>
+                    </div>
+                    -->
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="skills">
+            <div class="container">
+                <h2>My Skills</h2>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <h3>Roblox Studio</h3>
+                        <div class="progress">
+                            <div class="bar" data-width="90"></div>
+                        </div>
+                    </div>
+                    <div class="skill-card">
+                        <h3>HTML/CSS/JS</h3>
+                        <div class="progress">
+                            <div class="bar" data-width="85"></div>
+                        </div>
+                    </div>
+                    <div class="skill-card">
+                        <h3>Minecraft Modding</h3>
+                        <div class="progress">
+                            <div class="bar" data-width="75"></div>
+                        </div>
+                    </div>
+                    <div class="skill-card">
+                        <h3>VBScript</h3>
+                        <div class="progress">
+                            <div class="bar" data-width="80"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -86,13 +128,13 @@
                 <div class="music-grid">
                     <div class="music-card">
                         <h3>NewComer - Sample</h3>
-                        <p>A Sample To A Song I've Created</p>
+                        <p>A sample of one of the songs I've made.</p>
                         <audio controls>
                             <source src="NewComerSample.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
-                    <!-- Add more music cards here as needed -->
+                    <!-- To add more music, duplicate a <div class="music-card"> block below -->
                 </div>
             </div>
         </section>
@@ -130,6 +172,8 @@
         </div>
     </div>
 
+    <button id="back-to-top" class="back-to-top">↑</button>
+
     <footer>
         <div class="container">
             <p>&copy; 2025 KT. All rights reserved.</p>
@@ -139,4 +183,4 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
