--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#music">Music</a></li>
+                <li><a href="#top-songs">Top Songs</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -40,6 +41,8 @@
                 <h2>About Me</h2>
                 <h3>Name</h3>
                 <p>KT</p>
+                <h3>Gender</h3>
+                <p>Femboy</p>
                 <h3>Age</h3>
                 <p>16</p>
                 <h3>About Me</h3>
@@ -126,14 +129,41 @@
                 <h2>My Music</h2>
                 <div class="music-grid">
                     <div class="music-card">
-                        <h3>Music Track 1</h3>
-                        <p>A sample music project I've created. Enjoy the preview!</p>
+                        <h3>NewComer - Sample</h3>
+                        <p>Heres a sample of this kewl song I made :3</p>
                         <audio controls>
-                            <source src="assets/music1.mp3" type="audio/mpeg">
+                            <source src="NewComerSample.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
                     <!-- To add more music, duplicate a <div class="music-card"> block below -->
+                </div>
+            </div>
+        </section>
+
+        <section id="top-songs" class="top-songs">
+            <div class="container">
+                <h2>My Top Songs Of The Month</h2>
+                <div class="top-songs-grid">
+                    <div class="top-song-card">
+                        <h3>Song Name:</h3>
+                        <p><strong>My thoughts:</strong> This song has been stuck in my head all month—love the eerie vibe that fits my horror theme!</p>
+                        <audio controls>
+                            <source src="Unknown.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <!-- To add more top songs, duplicate a <div class="top-song-card"> block below -->
+                    <!--
+                    <div class="top-song-card">
+                        <h3>Another Song:</h3>
+                        <p><strong>My thoughts:</strong> Great beats for coding sessions.</p>
+                        <audio controls>
+                            <source src="assets/song2.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    -->
                 </div>
             </div>
         </section>
@@ -155,7 +185,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <p>Would you like to join the discord?</p>
-            <img src="assets/DiscordIcon.png" alt="Discord Icon" class="discord-icon">
+            <img src="DiscordIcon.png" alt="Discord Icon" class="discord-icon">
             <button id="join-discord">Yes</button>
             <button id="no-join">No</button>
         </div>
@@ -165,7 +195,7 @@
         <div class="modal-content">
             <span class="close-roblox">&times;</span>
             <p>You're leaving my site to go to https://www.roblox.com/games/placeholder. Continue?</p>
-            <img src="assets/RobloxIcon.png" alt="Roblox Icon" class="roblox-icon">
+            <img src="RobloxIcon.png" alt="Roblox Icon" class="roblox-icon">
             <button id="continue-roblox">Continue</button>
             <button id="nevermind-roblox">Nevermind</button>
         </div>
