--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <h2>My Top Songs Of The Month</h2>
                 <div class="top-songs-grid">
                     <div class="top-song-card">
-                        <h3>Song Name:</h3>
-                        <p><strong>My thoughts:</strong> This song has been stuck in my head all month—love the eerie vibe that fits my horror theme!</p>
+                        <h3>Song Name:  Dinosaurs Go Rawr - Remix by Amy Can Flyy</h3>
+                        <p><strong>My thoughts:</strong> Peak Song :3</p>
                         <audio controls>
-                            <source src="Unknown.mp3" type="audio/mpeg">
+                            <source src="DinosaursGoRawr.mp3" type="audio/mpeg">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
