--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
         </div>
     </div>
 
+    <div id="notification-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-notification">&times;</span>
+            <p id="notification-message"></p>
+            <button id="close-notification">OK</button>
+        </div>
+    </div>
+
     <button id="back-to-top" class="back-to-top">↑</button>
 
     <footer>
