--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#music">Music</a></li>
                 <li><a href="#top-songs">Top Songs</a></li>
+                <li><a href="#socials">Socials</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="hamburger">
@@ -99,25 +100,25 @@
                     <div class="skill-card">
                         <h3>Roblox Studio</h3>
                         <div class="progress">
-                            <div class="bar" data-width="90"></div>
+                            <div class="bar" data-width="50"></div>
                         </div>
                     </div>
                     <div class="skill-card">
                         <h3>HTML/CSS/JS</h3>
                         <div class="progress">
-                            <div class="bar" data-width="85"></div>
+                            <div class="bar" data-width="46"></div>
                         </div>
                     </div>
                     <div class="skill-card">
                         <h3>Minecraft Modding</h3>
                         <div class="progress">
-                            <div class="bar" data-width="75"></div>
+                            <div class="bar" data-width="46"></div>
                         </div>
                     </div>
                     <div class="skill-card">
                         <h3>VBScript</h3>
                         <div class="progress">
-                            <div class="bar" data-width="80"></div>
+                            <div class="bar" data-width="75"></div>
                         </div>
                     </div>
                 </div>
@@ -164,6 +165,70 @@
                         </audio>
                     </div>
                     -->
+                </div>
+            </div>
+        </section>
+
+        <section id="socials" class="socials">
+            <div class="container">
+                <h2>My Socials & Links</h2>
+                <div class="social-category">
+                    <h3 class="category-title green">Regular Socials</h3>
+                    <hr class="separator green">
+                    <div class="socials-grid">
+                        <div class="social-card">
+                            <img src="DiscordIcon.png" alt="Discord Icon">
+                            <p>Discord</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                        <div class="social-card">
+                            <img src="InstagramIcon.png" alt="Instagram Icon">
+                            <p>Instagram</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                        <div class="social-card">
+                            <img src="TiktokIcon.png" alt="Tiktok Icon">
+                            <p>TikTok</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                        <div class="social-card">
+                            <img src="YouTubeIcon.png" alt="YouTube Icon">
+                            <p>YouTube</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="social-category">
+                    <h3 class="category-title red">Gaming Socials</h3>
+                    <hr class="separator red">
+                    <div class="socials-grid">
+                        <div class="social-card">
+                            <img src="RobloxIcon.png" alt="Roblox Icon">
+                            <p>Roblox Profile</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                        <div class="social-card">
+                            <img src="MinecraftIcon.png" alt="Minecraft Icon">
+                            <p>Minecraft Profile</p>
+                            <p class="no-link">I haven't decided to put this out yet</p>
+                        </div>
+                        <!-- Add more gaming socials here if needed -->
+                    </div>
+                </div>
+                <div class="social-category">
+                    <h3 class="category-title rainbow">Other Websites I've Made</h3>
+                    <hr class="separator rainbow">
+                    <div class="socials-grid">
+                        <!-- Add cards for other websites here -->
+                        <!-- Example:
+                        <div class="social-card">
+                            <img src="SiteIcon.png" alt="Site Icon">
+                            <p>Website Name</p>
+                            <button class="social-button" data-action="redirect" data-url="https://example.com">Go To</button>
+                        </div>
+                        -->
+                        <p class="no-link center">No other websites added yet!</p>
+                    </div>
                 </div>
             </div>
         </section>
