--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="social-card">
                             <img src="DiscordIcon.png" alt="Discord Icon">
                             <p>Discord</p>
-                            <p class="no-link">I haven't decided to put this out yet</p>
+                            <button class="social-button" data-action="redirect" data-url="https://discord.com/users/1125940452282093618">Go To</button>
                         </div>
                         <div class="social-card">
                             <img src="InstagramIcon.png" alt="Instagram Icon">
@@ -189,12 +189,12 @@
                         <div class="social-card">
                             <img src="TiktokIcon.png" alt="Tiktok Icon">
                             <p>TikTok</p>
-                            <p class="no-link">I haven't decided to put this out yet</p>
+                            <button class="social-button" data-action="redirect" data-url="https://www.tiktok.com/@karmaticalmale">Go To</button>
                         </div>
                         <div class="social-card">
                             <img src="YouTubeIcon.png" alt="YouTube Icon">
                             <p>YouTube</p>
-                            <p class="no-link">I haven't decided to put this out yet</p>
+                            <button class="social-button" data-action="redirect" data-url="https://youtube.com/@karmaticalmale?si=Eo1EYNBJpp61QT52">Go To</button>
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                         <div class="social-card">
                             <img src="RobloxIcon.png" alt="Roblox Icon">
                             <p>Roblox Profile</p>
-                            <p class="no-link">I haven't decided to put this out yet</p>
+                            <button class="social-button" data-action="redirect" data-url="https://www.roblox.com/users/7100520844/profile">Go To</button>
                         </div>
                         <div class="social-card">
                             <img src="MinecraftIcon.png" alt="Minecraft Icon">
@@ -259,7 +259,7 @@
     <div id="roblox-modal" class="modal">
         <div class="modal-content">
             <span class="close-roblox">&times;</span>
-            <p>You're leaving my site to go to https://www.roblox.com/games/placeholder. Continue?</p>
+            <p>You're leaving my site to go to https://www.roblox.com/games/PLACEID Continue?</p>
             <img src="RobloxIcon.png" alt="Roblox Icon" class="roblox-icon">
             <button id="continue-roblox">Continue</button>
             <button id="nevermind-roblox">Nevermind</button>
